<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_weight=".6"
            android:background="@drawable/demand_dbg"
            android:layout_height="0dp">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:src="@drawable/logosignup"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_centerHorizontal="true"
                android:layout_height="wrap_content" />
            <obllivionsoft.djole.nis.rs.stusdeals.controller.customViews.MyTextViewBold
                android:layout_width="wrap_content"
                android:text="@string/yourcity"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_25sdp"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1.4"
            android:layout_margin="@dimen/_10sdp"
            android:orientation="vertical"
            android:layout_height="0dp">
            <obllivionsoft.djole.nis.rs.stusdeals.controller.customViews.MyTextView
                android:layout_width="wrap_content"
                android:textSize="@dimen/_14sdp"
                android:textColor="@color/colorBlack"
                android:text="Demand the deal that you would like to see featured on Stunii.Simply let us know using the section below"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_height="wrap_content">

                    <obllivionsoft.djole.nis.rs.stusdeals.controller.customViews.MyEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/City"
                        android:id="@+id/tv_city"
                        android:textSize="@dimen/_14sdp"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorBlack"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_height="wrap_content">

                    <obllivionsoft.djole.nis.rs.stusdeals.controller.customViews.MyEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/organisation"
                        android:id="@+id/tv_organization"
                        android:textSize="@dimen/_14sdp"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorBlack"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
                    android:layout_height="wrap_content">

                    <obllivionsoft.djole.nis.rs.stusdeals.controller.customViews.MyEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/typedeal"
                        android:id="@+id/tv_deal_type"
                        android:textSize="@dimen/_14sdp"
                        android:backgroundTint="@color/colorPrimary"
                        android:textColor="@color/colorBlack"
                        android:inputType="textPersonName|textCapWords" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:background="@drawable/boarder_next"
                android:layout_marginTop="@dimen/_50sdp"
                android:gravity="center"
                android:id="@+id/tv_demand"
                android:layout_height="wrap_content">
                <obllivionsoft.djole.nis.rs.stusdeals.controller.customViews.MyTextViewBold
                    android:layout_width="wrap_content"
                    android:text="@string/demanddeal"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_16sdp"
                    android:textColor="@color/colorWhite"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>




    </LinearLayout>

</LinearLayout>